# connector-live-captions-win

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cspell.config.yaml  taskfile.yaml  vcpkg.json
.github/workflows/: build.yml
config/: connector-live-captions.dict
include/: pch.h
src/: main.cpp  pch.cpp  pch.h
